force-app/main/default/objects/Pais__c/Pais__c.object-meta.xml
<CustomObject>
    <label>País</label>
    <nameField>
        <label>Nombre de País</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paises</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>