force-app/main/default/objects/Pais__c/fields/Codigo_ISO2__c.field-meta.xml
<CustomField>
    <fullName>Codigo_ISO2__c</fullName>
    <label>Código ISO 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>