force-app/main/default/objects/Pais__c/fields/Codigo_ISO3__c.field-meta.xml
<CustomField>
    <fullName>Codigo_ISO3__c</fullName>
    <label>Código ISO 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>