force-app/main/default/objects/Pais__c/fields/Codigo_ISO3_num__c.field-meta.xml
<CustomField>
    <fullName>Codigo_ISO3_num__c</fullName>
    <label>Código ISO 3 num</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>