force-app/main/default/objects/Pais__c/listViews/Paises_con_codigos.listView-meta.xml
<ListView>
    <fullName>Paises_con_codigos</fullName>
    <columns>NAME</columns>
    <columns>Codigo_ISO2__c</columns>
    <columns>Codigo_ISO3__c</columns>
    <columns>Codigo_ISO3_num__c</columns>
    <filterScope>Mine</filterScope>
    <label>Paises con códigos</label>
</ListView>